# yog-sothoth

./: .dockerignore  .env.example  .gitguardian.yaml  .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  audit.toml  docker-compose.yml  rust-toolchain.toml
crates/api/: Cargo.toml  README.md
crates/api/src/: application.rs  axum_app.rs  bootstrap.rs  http.rs  interface.rs  main.rs
crates/context/: Cargo.toml  README.md
crates/context/src/: error.rs  main.rs  providers.rs  source.rs  workers.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: amm.rs  application.rs  domain.rs  error.rs  lib.rs  protocols.rs  solana_types.rs  tools.rs  types.rs
crates/core/tests/: live_detector.rs
crates/indexer/: .env.exempl  Cargo.toml  README.md
crates/indexer/.sqlx/: query-21c038869eac848f945f988d02a69ff644dc213af86428c8197cf11e12ca0f5d.json  query-496c1040a5672cb5aa2b0781faa367cdee69b390f9b29cab2b8b11c6e1ec05b7.json  query-600dabc0bb33a0506a20b2a58b54ca6f6d7fbe6556f98786fb130dc5d0c364d3.json  query-6a9a67b5daf3432755f918f266efb9ffca39541bf06c325a847d702e1ce8f5fe.json  query-8928d891189d48972df66857779d72fe9c95a714a37a930ddb360485c148bc94.json  query-982f676be21e788bcd2518492b90857d649d17d46c617fc454de160fdda5187d.json  query-9b40cd1a206468a402856961a29088f062453cf13375f253b91123c1deff6227.json  query-cf851e4c6441c5562c1199371ec2b64abb201d0c496e74927e84517e6f88a05a.json  query-f79521358f64283e92af7cd34892c838298bed2c30b491a9e46bb7a407cf334a.json  query-fb60ad43c12450cf72ce7aa4174b050b5364258274b9185dbf29d5a11f16de96.json
crates/indexer/migrations/: 001_initial_schema.sql  002_web_readonly_user.sql
crates/indexer/script/: seed_watched_pools.sql
crates/indexer/src/: application.rs  bootstrap.rs  config.rs  domain.rs  error.rs  infra.rs  main.rs  utils.rs
crates/persistence/: Cargo.toml  README.md  setup_roles.sql
crates/persistence/.sqlx/: query-01367aec3bc9c8b49ad46a00a89a76d94b9790c98625883284f04b40d1f7d409.json  query-02e76b94d119102a797ae77beb0549ecaa33d4786ed8ba95a417c7920d1f940a.json  query-03fe1be0e6e41784e0c53e5f31028b4f7c73b8c9237d0f756e6f845fb964663d.json  query-08aa8eff61ec6f33358404d62e378614483ce1d6f6197012bdad6c1ecce49ea1.json  query-08f797aa2c1b7142f7e81428a75e0342585770756076d531e04bfc2fa380f210.json  query-0b1ed9a77d601577e46e3409408012cee36844e532e5bcc31b79d51a1687984a.json  query-0fbce92c04bcde26f4988caf7cac428f5a0d02bac0f1d92720c18c9d8f9589c7.json  query-116516544d9a63eb17937383e6e3fe6332348af95faf99926ae797c857ac8e7d.json  query-19273880d72996362cf521810eea7eb977e4c4e365e5fc801fd964de70961083.json  query-1be848ee184b346fb2b3ed7c14ba5be837565185047a1b3a0ebab8f7e051b5dc.json  query-1bf07d3732f613729cb27c2c1952e86f390aee0f9d01c29da99a3496e498ee3e.json  query-1f1933a766db7afa1c772c9d008f076e132f408c3b9afad5cbcfd7da8232bba1.json  query-1fb80b0feecd8344fc5eaf0821ac287f0fd3a0465ac41a88b07363722b12386b.json  query-2171fd9028a8d5da0f0ed059b94427f4773640de15b471dfcb44cd4282230f67.json  query-23014e8308f0ae0c4cb053e4585c2baafef2a77f00470494848c19f10967a848.json  query-252f783adb04faec101cf85aeec26c5ef197bf8c14fd0003acd8d67d0cc9a4b7.json  query-25b39a0296a566b7debda8f9b0e58b19a3d2ec7ce0b7a8490059944700e786f1.json  query-2604afb5b67909b5987e20cb48e2a1e2acb8c9874ca158b4d550df534bc976c1.json  query-26b5015ad6dd7107eca618591891d1bde9dbeb75d3a8eceef387e4d3b61b150e.json  query-26f6de492c879645388f12d919937f2fd9feb43a0a3584a996588d92b4daabc9.json  query-2c5554016bcadadda301680ec13fa2d72d7cff2432975523a11b770eb606402f.json  query-2c8e1466f01a370e82298af85bf1fce970e5ce84430b762a07b1a1951869152f.json  query-2d9122d0b182a0a960adf431a00a396fd6d5b7558ac30f2fa8c81c00ceaee4ff.json  query-330b3f14ca51afcba28429a300918f2581dff30ce1711d4d7038ce93a1cc1bd7.json  query-35b6b667f34ab0b6705e42affa9af6a9d04daabe273ef5bb40916086260a3410.json  query-3d8a1bc53df338fef9dbd44f8f631c56001111652ee500d71646cfa701eda61f.json  query-40be3623665bcf63490c25df4117cdacfc91b05798d0f6d5308df903000343e7.json  query-40c5102af655f19b1f159465d8a0f2b1368a46cb0c063e4ba00707b7f35f0b23.json  query-410720bcc39d3d1deff981883bc826fb2113f3843e9fcc401d8de0620c936dc0.json  query-411689468df82ada33362ba15fa80349b6bff5266026dd95c5831a1654d8f29b.json  query-43cf05a0ee803db5f1a84ebeb53b7eb7c244d993d64c825a2a478ab59ffeb346.json  query-4a82d3ece82308dde9b61f70429e0e9d71027f41fbc7d8dcf398890a379138a7.json  query-4c8224501eb47441c6514290152d1968adddf3df2647dce866d0cbf24fa4590d.json  query-4edf7f275e45cb85f93784048752027341d906c12b2f764cb31cddf4c732348c.json  query-4fd2e337d63c1c72f1a74af4fa5557fe43ef517807380caf5249bc6347cce8a2.json  query-507bc4bfe66d7ec4c94b8a8f55b922ffa8cf2d0ee6b6b910477cd79d0c5c909e.json  query-51e7c5fa13b45b80ac5a88f5d2cb408cf897e904163505834a97aced3a05821f.json  query-55b0623555f203d0c551aaad2e002a1273f630d43af97cd52db2b8ff9ba18fd8.json  query-58266da364ac8d7da7ddfe3656860e221feead35a619d1dd86e9fd65ab9eb94f.json  query-59aca2e7db1474d4902b41855bd446fbff4fbbdedfebd05f1f743eafaf225565.json  (+61 more)
crates/persistence/migrations/: 001_initial_schema.sql  002_create_position_events.sql  002_event_kind_check_constraints.sql  002_pool_current_state.sql  002_web_readonly_user.README.md  002_web_readonly_user.sql  003_close_position_events.sql  003_network_status.sql  003_rename_price_source_to_price_provider.sql  004_lock_position_events.sql  004_rename_metadata_source_to_metadata_provider.sql  004_token_enrichment.sql  005_permanent_lock_position_events.sql  006_initialize_pool_events.sql  007_set_pool_status_events.sql  008_update_pool_fees_events.sql  009_differentiated_retention.sql  010_swap_volume_hourly_cagg.sql  011_liquidity_hourly_cagg.sql  012_claim_position_fee_hourly_cagg.sql  013_claim_reward_hourly_cagg.sql  014_pool_mints_as_pool_property.sql  015_pool_fee_bps.sql  016_grant_context_fee_bps.sql  017_swap_fee_cagg.sql  018_pool_fee_percents.sql  019_pool_hourly_activity_view.sql  020_pool_current_tvl_view.sql  021_liquidity_events_valued_view.sql  022_create_signals.sql  023_pool_hourly_flow_view.sql  README.md  (+5 more)
crates/signals/: Cargo.toml  README.md
crates/wasm/: Cargo.toml
(+812 files in other folders)
