[workspace]
members = ["crates/core", "crates/indexer", "crates/wasm"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-retry = "0.3"

# Solana
solana-rpc-client = { version = "3", default-features = false }
solana-rpc-client-api = { version = "3", default-features = false }
solana-commitment-config = { version = "3", default-features = false }
solana-pubsub-client = { version = "3", default-features = false }
solana-pubkey = { version = "3", default-features = false }
solana-transaction-status = { version = "3", default-features = false }

# Database
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "chrono",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Config
dotenvy = "0.15"

# Errors
thiserror = "2"
anyhow = "1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
borsh = { version = "1", features = ["derive"] }
