[workspace]
members = [
  "crates/api",
  "crates/bootstrap",
  "crates/context",
  "crates/core",
  "crates/indexer",
  "crates/persistence",
  "crates/signals",
  "crates/wasm",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-retry = "0.3"
tokio-util = "0.7"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

# Solana
solana-rpc-client = { version = "4", default-features = false }
solana-rpc-client-api = { version = "4", default-features = false }
solana-commitment-config = { version = "3", default-features = false }
solana-pubsub-client = { version = "4", default-features = false }
solana-pubkey = { version = "4", default-features = false }
solana-signature = { version = "3", default-features = false }
solana-transaction-status = { version = "4", default-features = false }
solana-transaction-status-client-types = "4"

# Database
sqlx = { version = "0.8", default-features = false }
bigdecimal = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Errors
thiserror = "2"
anyhow = "1"

metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Misc
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
borsh = { version = "1", features = ["derive"] }

rustls = { version = "0.23", features = ["ring"] }

bs58 = "0.5"
base64 = "0.22"
sha2 = "0.11"
rust_decimal = "1"

# Axum
axum = "0.8.9"
tower-http = { version = "0.6.10", features = [
  "cors",
  "trace",
  "request-id",
  "set-header",
] }
uuid = { version = "1", features = ["v4"] }

reqwest = { version = "0.13", features = ["json", "rustls"] }
