[package]
name = "yog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
yog-core = { path = "../core" }
yog-persistence = { path = "../persistence" }
yog-bootstrap = { path = "../bootstrap" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
solana-pubkey = { workspace = true }
rust_decimal = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true } # version alignée sur le workspace
tokio = { workspace = true }
