[package]
name = "yog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace crates
yog-core = { path = "../core" }
yog-persistence = { path = "../persistence" }
yog-bootstrap = { path = "../bootstrap" }

# HTTP server
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Solana
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }

# Misc
anyhow = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
