[package]
name = "yog-context"
version = "0.1.0"
edition = "2024"

[dependencies]
yog-core = { path = "../core" }
yog-persistence = { path = "../persistence" }
yog-bootstrap={ path = "../bootstrap"}

tokio = { workspace = true }
tokio-util = { workspace = true }

reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

rustls = { workspace = true }

chrono = { workspace = true }
