[package]
name = "yog-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["solana"]
solana = ["dep:solana-transaction-status", "dep:solana-pubkey"]
wasm = []

[dependencies]
# Serialization / encoding
serde = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }

# Solana
solana-pubkey = { workspace = true, optional = true, default-features = false }
solana-signature = { workspace = true }
solana-transaction-status = { workspace = true, optional = true, default-features = false }
solana-transaction-status-client-types = { workspace = true }

# Misc
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json = { workspace = true }
