[package]
name = "yog-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
yog-core = { path = "../core" }

tokio = { workspace = true }
futures-util = { workspace = true }
tokio-retry = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }

solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-commitment-config = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction-status = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dotenvy = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

chrono = { workspace = true }
async-trait = { workspace = true }

metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

rustls = { workspace = true }
