[package]
name = "yog-persistence"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yog-migrate"
path = "src/bin/migrate.rs"

[features]
# Enables DB-backed integration tests (sqlx::test). Off by default so
# a plain `cargo test` stays fast and DB-free; the CI job
# `test-integration` turns it on against a real Postgres.
integration-tests = []

[dependencies]
# Workspace deps already declared at root
yog-core = { path = "../core" }
yog-bootstrap = { path = "../bootstrap" }

anyhow = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
  "bigdecimal",
  "uuid",
  "rust_decimal",
  "migrate",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
solana-pubkey = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
# Integration tests will spin up a real Postgres via docker-compose
tokio = { workspace = true, features = ["test-util", "macros"] }
