[package]
name = "yog-persistence"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yog-migrate"
path = "src/bin/migrate.rs"

[features]
# Enables DB-backed integration tests (sqlx::test). Off by default so
# a plain `cargo test` stays fast and DB-free; the CI job
# `test-integration` turns it on against a real Postgres.
integration-tests = []

[dependencies]
# Workspace crates
yog-core = { path = "../core" }
yog-bootstrap = { path = "../bootstrap" }

# Database
sqlx = { workspace = true, default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
  "bigdecimal",
  "uuid",
  "rust_decimal",
  "migrate",
] }
bigdecimal = { workspace = true }
rust_decimal = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Solana
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }

# Errors / logging / config
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }

# Misc
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# Integration tests will spin up a real Postgres via docker-compose
tokio = { workspace = true, features = ["test-util", "macros"] }
