[package]
name = "yog-signals"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "signal-engine"
path = "src/main.rs"

[dependencies]
# Workspace crates. The engine + detectors (engine.rs, detectors/) use only
# core traits; the process wiring (bootstrap/) pulls in yog-persistence for
# the concrete Pg repositories and yog-bootstrap for the runtime plumbing.
yog-core = { path = "../core" }
yog-persistence = { path = "../persistence" }
yog-bootstrap = { path = "../bootstrap" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Errors / logging / config
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Misc
chrono = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
solana-pubkey = { workspace = true }
